--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 document.getElementById('episodeContent').innerText = 'Failed to load episodes. Please try again later.';
             });
 
-      function parseRPY(data) {
+function parseRPY(data) {
     const episodes = [];
     const episodeRegex = /label episode(\d+):([\s\S]*?)(?=label episode\d+:|$)/g;
     let match;
@@ -99,6 +99,13 @@
                 });
             }
 
+            // Check for next episode transition
+            const nextEpisodeRegex = /jump episode(\d+)/g;
+            let nextEpisodeMatch;
+            if ((nextEpisodeMatch = nextEpisodeRegex.exec(sceneMatch[2])) !== null) {
+                scene.nextEpisode = `episode${nextEpisodeMatch[1]}`;
+            }
+
             episode.scenes.push(scene);
         }
 
@@ -107,6 +114,7 @@
 
     return episodes;
 }
+
 
 
         function displayEpisodeList() {
