--- a/index.html
+++ b/index.html
@@ -130,21 +130,20 @@ function parseRPY(data) {
             });
         }
 
-function loadEpisode(episodeId) {
-    // Extract the episode number from the episodeId (e.g., "episode2" -> 2)
-    const episodeNumber = episodeId.replace('episode', '');
-    const episodeIndex = episodes.findIndex(ep => ep.episode === episodeNumber);
+function loadEpisode(index) {
+    const episodeIndex = parseInt(index, 10); // Convert the index to an integer
 
-    if (episodeIndex !== -1) {
+    if (episodeIndex >= 0 && episodeIndex < episodes.length) {
         const episode = episodes[episodeIndex];
         currentEpisodeIndex = episodeIndex; 
         currentSceneId = episode.scenes[0].id; // Start with the first scene of the new episode
         displayScene(episode, currentSceneId); 
     } else {
-        console.error('Episode not found:', episodeId);
+        console.error('Episode not found:', index);
         document.getElementById('episodeContent').innerText = 'Episode not found. Please try again later.';
     }
 }
+
 
 
 
@@ -155,6 +154,7 @@ function displayScene(episode, sceneId) {
     if (scene) {
         let content = `<h2>${episode.title}</h2><p>${scene.text}</p>`;
         
+        // Check if there are choices to display
         if (scene.choices && scene.choices.length > 0) {
             content += scene.choices.map(choice => 
                 `<button class="choice-button" data-next-scene="${choice.nextScene}">${choice.text}</button>`
@@ -186,6 +186,7 @@ function displayScene(episode, sceneId) {
         episodeContent.innerHTML = `<p>Scene not found. Please check the episode structure.</p>`;
     }
 }
+
 
 
         function loadScene(sceneId) {
